openshift/hd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hadoop
  namespace: hadoop
spec:
  selector:
    app: hadoop-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
