openshift/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: hadoop
spec:
  selector:
    app: pg-app
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
